--- a/index.html
+++ b/index.html
@@ -31,46 +31,38 @@
         </div>
         <div class="section">
             <h2>Technical Skills</h2>
-            <div class="form">
-                <div class="form-row">
-                    <div class="col-name">Languages</div>
-                    <div class="col-value skill-row">
-                        <span class="skill">Java</span>
-                        <span class="skill">Typescript</span>
-                        <span class="skill">bash</span>
-                    </div>
+            <div class="form-grid">
+                <div class="col-name">Languages</div>
+                <div class="col-value skill-row">
+                    <span class="skill">Java</span>
+                    <span class="skill">Typescript</span>
+                    <span class="skill">bash</span>
                 </div>
 
-                <div class="form-row">
-                    <div class="col-name">Backend</div>
-                    <div class="col-value">
-                        <span class="skill skill-row">Spring</span>
-                        <span class="skill skill-row">JPA, Hibernate</span>
-                        <span class="skill skill-row">Rest, Swagger</span>
-                        <span class="skill skill-row">Docker</span>
-                    </div>
+                <div class="col-name">Backend</div>
+                <div class="col-value">
+                    <span class="skill skill-row">Spring</span>
+                    <span class="skill skill-row">JPA, Hibernate</span>
+                    <span class="skill skill-row">Rest, Swagger</span>
+                    <span class="skill skill-row">Docker</span>
                 </div>
 
-                <div class="form-row">
-                    <div class="col-name">Frontend</div>
-                    <div class="col-value">
-                        <span class="skill">Angular, RxJs, NgRx</span>
-                        <span class="skill">CSS, SASS</span>
-                        <span class="skill">D3JS</span>
-                        <span class="skill">JSF, GWT</span>
-                    </div>
+                <div class="col-name">Frontend</div>
+                <div class="col-value">
+                    <span class="skill">Angular, RxJs, NgRx</span>
+                    <span class="skill">CSS, SASS</span>
+                    <span class="skill">D3Js</span>
+                    <span class="skill">JSF</span>
+                    <span class="skill">GWT</span>
                 </div>
 
-                <div class="form-row">
-                    <div class="col-name">Databases, Caches</div>
-                    <div class="col-value">
-                        <span class="skill">Oracle</span>
-                        <span class="skill">MySQL</span>
-                        <span class="skill">MongoDB</span>
-                        <span class="skill">Infinispan, Hazelcast, Ehcache</span>
-                    </div>
+                <div class="col-name">Databases, Caches</div>
+                <div class="col-value">
+                    <span class="skill">Oracle</span>
+                    <span class="skill">MySQL</span>
+                    <span class="skill">MongoDB</span>
+                    <span class="skill">Infinispan, Hazelcast, Ehcache</span>
                 </div>
-
             </div>
         </div>
         <div class="section">
@@ -193,21 +185,20 @@
                                     Build master, developer, test developer of Java Compatibility Kit (JCK), a large test suite ensuring compatibility between various vendor Java implementations including a reference implementation. My main duties were
                                 </p>
                                 <ul class="text-md">
-                                    <li>The development and support of a JCK build system. Optimization of a test running harness.</li>
+                                    <li>Development and support of the JCK build system. Optimization of the test running harness.</li>
                                     <li>Distributed workplace support and synchronization of data between Santa-Clara (USA) and Saint-Petersburg (Russia).</li>
                                     <li>Internal tools development and support.</li>
                                     <li>Test development in the following areas: JAXB, JAXP, XSLT.</li>
                             </ul>
                                 <p class="text-md">
-
                                     Developer of JAXB Technology Compatibility Kit, a large test suite used to ensure compatibility between JAXB specification and its various implementations. The project was started as a standalone product, but since Java 6 the TCK became an integrated part of JCK. My main responsibilities were:
                                 </p>
                                 <ul class="text-md">
                                     <li>Test development.</li>
                                     <li>Specification markup.</li>
-                                    <li>Filing change requests against JAXB specification and its reference implementation.</li>
-                                    JAXB TCK build and infrastructure development.
-                            </ul>
+                                    <li>Change requests against JAXB specification and its reference implementation.</li>
+                                    <li>JAXB TCK build and infrastructure development.</li>
+                                </ul>
 
                                 <p class="text-md">
                                     Automated tests, build and infrastructure developer of JavaFX 1.3 Compatibility Test Suite (JavaFX CTS), a conformance test suite for functional testing of JavaFX implementations. The suite contains a lot of tests on graphics.
@@ -283,20 +274,16 @@
                     <li class="position-row">
                         <div class="company-title-row">
                             <span class="position-title-name">Memories game</span>
-                            <p class="text-md">
+                            <p class="text-md pet-p">
                                 <a href="https://memo-app-d26zo.ondigitalocean.app">Memories game</a>
                                 is an online multi-player game, created for my friends to be in touch for the lockdown period.
                             </p>
                         </div>
                     </li>
-                </ul>
-            </div>
-            <div class="project-row">
-                <ul>
                     <li class="position-row">
                         <div class="company-title-row">
                             <span class="position-title-name">Chronology</span>
-                            <p class="text-md">
+                            <p class="text-md pet-p">
                                 <a href="https://longago-nuygw.ondigitalocean.app/select">Chronology app</a>
                                 is a visual representation of events, the work is in progress at the moment.
                             </p>
@@ -304,9 +291,7 @@
                     </li>
                 </ul>
             </div>
-
         </div>
-
     </div>
 </div>
 </body>
