--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <div class="cell-header">
         <div class="main-title-row">
             <h1>Dmitry Lepekhin</h1>
-            <div class="text-sm">
-                <img src="img/mail.svg"> <a href="mailto:dmitry.lepekhin@gmail.com">dmitry.lepekhin@gmail.com</a>
-                <img src="img/phone.svg"> <a href="tel:+79213828048">+7 (921) 382-80-48</a>
+            <div class="text-sm contact-area">
+                <div>
+                    <img src="img/mail.svg" class="small-icon"> <a href="mailto:dmitry.lepekhin@gmail.com">dmitry.lepekhin@gmail.com</a>
+                </div>
+                <div>
+                    <img src="img/phone.svg" class="small-icon"> <a href="tel:+79213828048">+7 (921) 382-80-48</a>
+                </div>
             </div>
         </div>
     </div>
@@ -269,6 +273,8 @@
         </div>
         <div class="section">
             <h2>Pet projects</h2>
+            <div class="history-row">
+
             <div class="project-row">
                 <ul>
                     <li class="position-row">
@@ -290,6 +296,7 @@
                         </div>
                     </li>
                 </ul>
+            </div>
             </div>
         </div>
     </div>
