--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Dmitry Lepekhin's CV</title>
     <link href="index.css" rel="stylesheet">
+    <link rel="icon" href="favicon.ico"/>
 </head>
 <body>
 
@@ -281,7 +282,7 @@
                         <div class="company-title-row">
                             <span class="position-title-name">Memories game</span>
                             <p class="text-md pet-p">
-                                <a href="https://memo-app-d26zo.ondigitalocean.app">Memories game</a>
+                                <a href="https://memo-app-d26zo.ondigitalocean.app" target="_blank">Memories game</a>
                                 is an online multi-player game, created for my friends to be in touch for the lockdown period.
                             </p>
                         </div>
@@ -290,7 +291,7 @@
                         <div class="company-title-row">
                             <span class="position-title-name">Chronology</span>
                             <p class="text-md pet-p">
-                                <a href="https://longago-nuygw.ondigitalocean.app/select">Chronology app</a>
+                                <a href="https://longago-nuygw.ondigitalocean.app/select" target="_blank">Chronology app</a>
                                 is a visual representation of events, the work is in progress at the moment.
                             </p>
                         </div>
