some text fixed

--- a/index.html
+++ b/index.html
@@ -106,9 +106,6 @@
                                         <li>Assist colleagues to start working with new technologies (Angular, NgRx)</li>
                                         <li>Take part in Rest API design and development</li>
                                         <li>Customer support, product maintenance</li>
-                                        <li>Product features design and development</li>
-                                        <li>Implemented tasks to strengthen the product security</li>
-                                        <li>Tasks on performance improvement</li>
                                     </ul>
                                 </div>
                             </li>
@@ -243,7 +240,7 @@
                                 <span class="position-title-name">Software Developer of a mobile app</span>
                                 <span class="text-sm caption-decor">2004</span>
                                 <p class="text-md">
-                                    Lead developer of a mobile application for Megafon, one of the leading mobile network providers in Russia. Both client and server side components were implemented. The following technologies were used: Java ME CLDC and MIDP (client), servlets, MySQL database (server).
+                                    A lead developer of a mobile application for Megafon, one of the leading mobile network providers in Russia. Both client and server side components were implemented. The following technologies were used: Java ME CLDC and MIDP (client), servlets, MySQL database (server).
                                 </p>
                             </div>
                         </li>
