--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>Profile</h2>
             <p>
                 I am a full-stack software developer more focusing on back-end Java with the expertise
-                of building Angular single-page applications. I like clean good-organized code conveying clearly
+                of building Angular single-page applications. I like clean well-structured code conveying clearly
                 ideas and intentions.
             </p>
         </div>
