--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
                     <img src="img/phone.svg" class="small-icon"> <a href="tel:+79213828048">+7 (921) 382-80-48</a>
                 </div>
             </div>
+            <div class="text-sm contact-area">
+                <div>
+                    <img src="img/linkedin.svg" class="small-icon"> <a href="https://www.linkedin.com/in/dmitry-lepekhin-89610624/" target="_blank">dmitry-lepekhin-89610624</a>
+                </div>
+            </div>
+            <div class="text-sm contact-area">
+                <div>
+                    <img src="img/link.svg" class="small-icon"> <a href="https://dmitrylepekhin.github.io/">https://dmitrylepekhin.github.io</a>
+                </div>
+            </div>
         </div>
     </div>
     <div class="cell-content">
@@ -296,6 +306,25 @@
                 </ul>
             </div>
             </div>
+        </div>
+        <div class="section">
+            <h2>Additional links</h2>
+            <ul>
+                <li>
+                    <div class="text-sm contact-area">
+                        <div>
+                            <img src="img/linkedin.svg" class="md-icon"> <a href="https://www.linkedin.com/in/dmitry-lepekhin-89610624/" target="_blank">dmitry-lepekhin-89610624</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="text-sm contact-area">
+                        <div>
+                            <img src="img/link.svg" class="md-icon"> <a href="https://dmitrylepekhin.github.io/" target="_blank">https://dmitrylepekhin.github.io</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
