--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="section">
             <h2>Profile</h2>
             <p>
-                I am a full-stack software developer more focusing on back-end Java with the expertise
-                of building Angular single-page applications. I like clean well-structured code conveying clearly
+                I am a full-stack software developer focusing more on back-end Java with expertise
+                in building Angular single-page applications. I like clean, well-structured code conveying clearly
                 ideas and intentions.
             </p>
         </div>
@@ -48,14 +48,13 @@
                 <div class="col-value">
                     <span class="skill skill-row">Spring</span>
                     <span class="skill skill-row">JPA, Hibernate</span>
-                    <span class="skill skill-row">Rest, Swagger</span>
                     <span class="skill skill-row">Docker</span>
                 </div>
 
                 <div class="col-name">Frontend</div>
                 <div class="col-value">
                     <span class="skill">Angular, RxJs, NgRx</span>
-                    <span class="skill">CSS, SASS</span>
+                    <span class="skill">CSS, SCSS</span>
                     <span class="skill">D3Js</span>
                     <span class="skill">JSF</span>
                     <span class="skill">GWT</span>
@@ -68,6 +67,19 @@
                     <span class="skill">MongoDB</span>
                     <span class="skill">Infinispan, Hazelcast, Ehcache</span>
                 </div>
+
+                <div class="col-name">Protocols</div>
+                <div class="col-value">
+                    <span class="skill">Rest API, Swagger</span>
+                    <span class="skill">Websocket</span>
+                </div>
+
+                <div class="col-name">Build</div>
+                <div class="col-value">
+                    <span class="skill">Gradle</span>
+                    <span class="skill">Maven</span>
+                </div>
+
             </div>
         </div>
         <div class="section">
@@ -193,19 +205,19 @@
                                     <li>Test development in the following areas: JAXB, JAXP, XSLT.</li>
                             </ul>
                                 <p class="text-md">
-                                    Developer of JAXB Technology Compatibility Kit, a large test suite used to ensure compatibility between JAXB specification and its various implementations. The project was started as a standalone product, but since Java 6 the TCK became an integrated part of JCK. My main responsibilities were:
+                                    Developer of JAXB Technology Compatibility Kit, a large test suite used to ensure compatibility between JAXB specification and its various implementations. The project was started as a standalone product, but since Java 6 the TCK has become an integrated part of JCK. My main responsibilities were:
                                 </p>
                                 <ul class="text-md">
                                     <li>Test development.</li>
                                     <li>Specification markup.</li>
-                                    <li>Change requests against JAXB specification and its reference implementation.</li>
+                                    <li>Change requests for JAXB specification and its reference implementation.</li>
                                     <li>JAXB TCK build and infrastructure development.</li>
                                 </ul>
 
                                 <p class="text-md">
                                     Automated tests, build and infrastructure developer of JavaFX 1.3 Compatibility Test Suite (JavaFX CTS), a conformance test suite for functional testing of JavaFX implementations. The suite contains a lot of tests on graphics.
 
-                                    Project Lead, Software Engineer of JAXP Test Compatibility Kit 1.4b (JAXP TCK). The JAXP Technology Compatibility Kit (TCK) is a portable, configurable automated test suite and a set of tools used to certify that an implementation of JAXP as an optional package for Java SE conforms to the JAXP 1.4 specifications defined by an update release of JSR 206. My main responsibilities were:
+                                    Project Lead, Software Engineer of JAXP Test Compatibility Kit 1.4b (JAXP TCK). The JAXP Technology Compatibility Kit (TCK) is a portable, configurable automated test suite and a set of tools used to certify that a JAXP implementation as an optional package for Java SE conforms to the JAXP 1.4 specifications defined by an update release of JSR 206. My main responsibilities were:
                                 </p>
                                 <ul class="text-md">
                                     <li>Task planning</li>
@@ -280,7 +292,7 @@
                             <span class="position-title-name">Memories game</span>
                             <p class="text-md pet-p">
                                 <a href="https://memo-app-d26zo.ondigitalocean.app" target="_blank">Memories game</a>
-                                is an online multi-player game, created for my friends to be in touch for the lockdown period.
+                                is an online multi-player game, designed to keep my friends connected during the lockdown period.
                             </p>
                         </div>
                     </li>
@@ -289,7 +301,7 @@
                             <span class="position-title-name">Chronology</span>
                             <p class="text-md pet-p">
                                 <a href="https://longago-nuygw.ondigitalocean.app/select" target="_blank">Chronology app</a>
-                                is a visual representation of events, the work is in progress at the moment.
+                                is a visual representation of events, the work is being in progress at the moment.
                             </p>
                         </div>
                     </li>
