temporary shared files

--- a/files/index.html
+++ b/files/index.html
@@ -12,6 +12,7 @@
     <li><a href="https://dmitrylepekhin.github.io/files/PEL.doc">PEL.doc</a></li>
     <li><a href="https://dmitrylepekhin.github.io/files/VISA.pdf">VISA.pdf</a></li>
     <li><a href="https://dmitrylepekhin.github.io/files/Zahtjev.pdf">Zahtjev.pdf</a></li>
+    <li><a href="https://dmitrylepekhin.github.io/files/ID.docx">ID.docx</a></li>
 </ul>
 
 </body>
