temporary shared files

--- a/files/index.html
+++ b/files/index.html
@@ -7,8 +7,12 @@
 <body>
 
 <ul>
-    <li><a href="https://dmitrylepekhin.github.io/files/doc1.pdf">doc1.pdf</a></li>
-    <li><a href="https://dmitrylepekhin.github.io/files/doc2.pdf">doc2.pdf</a></li>
+    <li><a href="https://dmitrylepekhin.github.io/files/FATCA.pdf">FATCA.pdf</a></li>
+    <li><a href="https://dmitrylepekhin.github.io/files/foto.docx">foto.docx</a></li>
+    <li><a href="https://dmitrylepekhin.github.io/files/PEL.doc">PEL.doc</a></li>
+    <li><a href="https://dmitrylepekhin.github.io/files/VISA.pdf">VISA.pdf</a></li>
+    <li><a href="https://dmitrylepekhin.github.io/files/Zahtjev.pdf">Zahtjev.pdf</a></li>
+    <li><a href="https://dmitrylepekhin.github.io/files/ID.docx">ID.docx</a></li>
 </ul>
 
 </body>
