updated print view for chrome

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
     <div class="cell-header">
         <div class="main-title-row">
             <h1>Dmitry Lepekhin</h1>
-            <div class="text-sm contact-area">
+            <div class="text-sm contact-area expand-width">
+
                 <div>
                     <img src="img/mail.svg" class="small-icon"> <a href="mailto:dmitry.lepekhin@gmail.com">dmitry.lepekhin@gmail.com</a>
                 </div>
                 <div>
-                    <img src="img/phone.svg" class="small-icon"> <a href="tel:+79213828048">+7 (921) 382-80-48</a>
+                    <img src="img/telegram.svg" class="small-icon"> <a href="tel:+79213828048">+7 (921) 382-80-48</a>
+                </div>
+                <div>
+                    <img src="img/phone.svg" class="small-icon"> <a href="tel:+38269518943">+382 (69) 518-943</a>
                 </div>
             </div>
         </div>
@@ -29,7 +33,7 @@
         <div class="section">
             <h2>Profile</h2>
             <p>
-                I am a full-stack software developer focusing more on back-end Java with expertise
+                Full-stack software developer focusing more on back-end Java with expertise
                 in building Angular single-page applications. I like clean, well-structured code conveying clearly
                 ideas and intentions.
             </p>
@@ -64,7 +68,6 @@
                 <div class="col-value">
                     <span class="skill">Oracle</span>
                     <span class="skill">MySQL</span>
-                    <span class="skill">MongoDB</span>
                     <span class="skill">Infinispan, Hazelcast, Ehcache</span>
                 </div>
 
@@ -101,7 +104,7 @@
                                     <span class="text-sm caption-decor">May, 2021 - Present</span>
                                     <ul class="text-md">
                                         <li>Product features design and development</li>
-                                        <li>Implemented tasks to strengthen the product security</li>
+                                        <li>Tasks to strengthen the product security</li>
                                         <li>Tasks on performance improvement</li>
                                     </ul>
                                 </div>
@@ -146,16 +149,15 @@
                     <ul>
                         <li class="position-row">
                             <div class="company-title-row">
-                                <span class="position-title-name">Software Developer at TCK Tools team</span>
+                                <span class="position-title-name">Senior Software Developer - TCK Tools team</span>
                                 <span class="text-sm caption-decor">Project: TCK tools, JCK</span>
                                 <span class="text-sm caption-decor">Jan 2014 - Nov 2015</span>
                                 <p class="text-md">
-                                    Development of tools responsible for building Java Compatibility Kit (JCK), a large test suite ensuring compatibility between various vendor Java implementations including a reference implementation, and other Test Compatibility Kits. My primary duties are:
+                                    Development of tools responsible for building Java Compatibility Kit (JCK), a large test suite ensuring compatibility between various vendor Java implementations including the reference implementation, and other Test Compatibility Kits.
                                 </p>
                                 <ul class="text-md">
-                                    <li>Participation in implementation of the key JCK 8 and JCK 9 features (Network Support, Jigsaw modules).</li>
-                                    <li>As a JCK Build owner, I am responsible for stable and fast JCK Build.</li>
                                     <li>Development and support of building tools (BTools).</li>
+                                    <li>As a JCK Build owner, I was responsible for stable and fast JCK Build.</li>
                                     <li>Setup and support of various team tools (Jenkins, Weekly Report Tool, CCC Dispatcher)</li>
                                 </ul>
                             </div>
@@ -194,41 +196,15 @@
                             <div class="company-title-row">
                                 <span class="position-title-name">Software Developer at JCK</span>
                                 <span class="text-sm caption-decor">Project: JCK</span>
-                                <span class="text-sm caption-decor">Jan 2005 - Aug 2010, (Jan 2011 in Oracle)</span>
+                                <span class="text-sm caption-decor">Jan 2005 - Mar 2011</span>
                                 <p class="text-md">
-                                    Build master, developer, test developer of Java Compatibility Kit (JCK), a large test suite ensuring compatibility between various vendor Java implementations including a reference implementation. My main duties were
+                                    Build master, developer, test developer of Java Compatibility Kit (JCK), a large test suite ensuring compatibility between various vendor Java implementations including the reference implementation.
                                 </p>
                                 <ul class="text-md">
                                     <li>Development and support of the JCK build system. Optimization of the test running harness.</li>
-                                    <li>Distributed workplace support and synchronization of data between Santa-Clara (USA) and Saint-Petersburg (Russia).</li>
                                     <li>Internal tools development and support.</li>
-                                    <li>Test development in the following areas: JAXB, JAXP, XSLT.</li>
-                            </ul>
-                                <p class="text-md">
-                                    Developer of JAXB Technology Compatibility Kit, a large test suite used to ensure compatibility between JAXB specification and its various implementations. The project was started as a standalone product, but since Java 6 the TCK has become an integrated part of JCK. My main responsibilities were:
-                                </p>
-                                <ul class="text-md">
-                                    <li>Test development.</li>
-                                    <li>Specification markup.</li>
-                                    <li>Change requests for JAXB specification and its reference implementation.</li>
-                                    <li>JAXB TCK build and infrastructure development.</li>
-                                </ul>
-
-                                <p class="text-md">
-                                    Automated tests, build and infrastructure developer of JavaFX 1.3 Compatibility Test Suite (JavaFX CTS), a conformance test suite for functional testing of JavaFX implementations. The suite contains a lot of tests on graphics.
-
-                                    Project Lead, Software Engineer of JAXP Test Compatibility Kit 1.4b (JAXP TCK). The JAXP Technology Compatibility Kit (TCK) is a portable, configurable automated test suite and a set of tools used to certify that a JAXP implementation as an optional package for Java SE conforms to the JAXP 1.4 specifications defined by an update release of JSR 206. My main responsibilities were:
-                                </p>
-                                <ul class="text-md">
-                                    <li>Task planning</li>
-                                    <li>Effective work with other teams: Release Engineering, Technical Writers, QA</li>
-                                    <li>Maintenance and customization of JAXP TCK build system.</li>
-                            </ul>
-                                <ul class="text-md">
-                                    <li>Participation in implementation of the key JCK 8 and JCK 9 features (Network Support, Jigsaw modules).</li>
-                                    <li>As a JCK Build owner, I am responsible for stable and fast JCK Build.</li>
-                                    <li>Development and support of building tools (BTools).</li>
-                                    <li>Setup and support of various team tools (Jenkins, Weekly Report Tool, CCC Dispatcher)</li>
+                                    <li>Distributed workplace support and synchronization of data between Santa-Clara (USA) and Saint-Petersburg (Russia).</li>
+                                    <li>Test development and specification markup in the following areas: JAXB, JAXP, XSLT.</li>
                                 </ul>
                             </div>
 
@@ -252,7 +228,7 @@
                                 <span class="position-title-name">Software Developer of a mobile app</span>
                                 <span class="text-sm caption-decor">2004</span>
                                 <p class="text-md">
-                                    A lead developer of a mobile application for Megafon, one of the leading mobile network providers in Russia. Both client and server side components were implemented. The following technologies were used: Java ME CLDC and MIDP (client), servlets, MySQL database (server).
+                                    A sole developer of a mobile chat application. Both client and server side components were implemented. The following technologies were used: Java ME CLDC and MIDP (client), servlets, MySQL database (server).
                                 </p>
                             </div>
                         </li>
