--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                     <span class="text-sm caption-decor">Project: Kofax FraudOne project, counterfeit check detection</span>
                                     <span class="text-sm caption-decor">Nov 2015 - Aug 2017</span>
                                     <ul class="text-md">
-                                        <li>Owner of the project component</li>
+                                        <li>Owner of one component of the project</li>
                                     </ul>
                                 </div>
                             </li>
@@ -165,7 +165,7 @@
                         </li>
                         <li class="position-row">
                             <div class="company-title-row">
-                                <span class="position-title-name">Software Developer at Oracle University</span>
+                                <span class="position-title-name">Senior Software Developer at Oracle University</span>
                                 <span class="text-sm caption-decor">Project: Oracle University DW and BI</span>
                                 <span class="text-sm caption-decor">Feb 2011 - Jan, 2014</span>
                                 <p class="text-md">
